@@ -552,10 +552,8 @@ if( $conf->posted && ( 0 == count( $errs ) ) ) {
 		}
 
 		print "<li>Connected to $myver";
-		if( version_compare( $myver, "4.0.0" ) >= 0 ) {
-			print "; enabling MySQL 4 enhancements";
-			$conf->DBmysql4 = true;
-			$local = writeLocalSettings( $conf );
+		if( version_compare( $myver, "4.0.0" ) < 0 ) {
+			die( " -- mysql 4.0 or later required. Aborting." );
 		}
 		$mysqlNewAuth   = version_compare( $myver, "4.1.0", "ge" );
 		if( $mysqlNewAuth && $mysqlOldClient ) {
@@ -1043,7 +1041,6 @@ function escapePhpString( $string ) {
 }
 
 function writeLocalSettings( $conf ) {
-	$conf->DBmysql4 = @$conf->DBmysql4 ? 'true' : 'false';
 	$conf->UseImageResize = $conf->UseImageResize ? 'true' : 'false';
 	$conf->PasswordSender = $conf->EmergencyContact;
 	$zlib = ($conf->zlib ? "" : "# ");
@@ -1118,6 +1115,10 @@ function writeLocalSettings( $conf ) {
 # This file was automatically generated by the MediaWiki installer.
 # If you make manual changes, please keep track in case you need to
 # recreate them later.
+#
+# See includes/DefaultSettings.php for all configurable settings
+# and their default values, but don't forget to make changes in _this_
+# file, not there.
 
 \$IP = \"{$slconf['IP']}\";
 ini_set( \"include_path\", \".$sep\$IP$sep\$IP/includes$sep\$IP/languages\" );
@@ -1173,9 +1174,6 @@ if ( \$wgCommandLineMode ) {
 \$wgDBpassword       = \"{$slconf['DBpassword']}\";
 \$wgDBprefix         = \"{$slconf['DBprefix']}\";
 \$wgDBtype           = \"{$slconf['DBtype']}\";
-
-# If you're on MySQL 3.x, this next line must be FALSE:
-\$wgDBmysql4 = {$conf->DBmysql4};
 
 ## Shared memory settings
 \$wgMainCacheType = $cacheType;
